--- a/Web.config
+++ b/Web.config
@@ -100,6 +100,11 @@
     </staticContent>
     <httpProtocol>
       <customHeaders>
+        <!-- 
+					http://hacks.mozilla.org/2009/07/cross-site-xmlhttprequest-with-cors/
+					Uncomment to serve cross-domain ajax requests
+					<add name="Access-Control-Allow-Origin" value="*" />
+				-->
         <remove name="X-Powered-By"/>
         <add name="X-UA-Compatible" value="IE=Edge,chrome=1" />
       </customHeaders>
