Added useful rewrite rules

--- a/Web.config
+++ b/Web.config
@@ -119,9 +119,32 @@
           </conditions>
           <action type="Redirect" url="http://website.com{PATH_INFO}" redirectType="Permanent" />
         </rule>
+        
+        <rule name="Default Document" stopProcessing="true">
+          <match url="(.*?)/?Default\.aspx$" />
+          <action type="Redirect" url="{R:1}/" />
+        </rule>
+        
+        <rule name="rewrite aspx" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add matchType="IsFile" negate="true" />
+            <add matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="{R:1}.aspx"/>
+        </rule>
+
+        <rule name="FoldersEndWithSlash">
+          <match url="[^/]$" ignoreCase="false" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{URL}" pattern="\.axd$" negate="true" ignoreCase="false" />
+          </conditions>
+          <action type="Redirect" url="{URL}/" redirectType="Permanent" appendQueryString="false" />
+        </rule>
       </rules>
     </rewrite>
-    
+  
   </system.webServer>
   <system.net>
     <mailSettings>
