Tweaks, fixes, and a JQuery update

--- a/Web.config
+++ b/Web.config
@@ -112,6 +112,7 @@
     
     <rewrite>
       <rules>
+        
         <rule name="Remove WWW" stopProcessing="true">
           <match url="^(.*)$" />
           <conditions>
@@ -124,24 +125,15 @@
           <match url="(.*?)/?Default\.aspx$" />
           <action type="Redirect" url="{R:1}/" />
         </rule>
-        
-        <rule name="rewrite aspx" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions>
-            <add matchType="IsFile" negate="true" />
-            <add matchType="IsDirectory" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="{R:1}.aspx"/>
-        </rule>
 
-        <rule name="FoldersEndWithSlash">
-          <match url="[^/]$" ignoreCase="false" />
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{URL}" pattern="\.axd$" negate="true" ignoreCase="false" />
+        <rule name="Lower Case URLs" stopProcessing="true">
+          <match url="[A-Z]" ignoreCase="false" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+            <add input="{URL}" pattern="WebResource.axd" negate="true" />
           </conditions>
-          <action type="Redirect" url="{URL}/" redirectType="Permanent" appendQueryString="false" />
+          <action type="Redirect" url="{ToLower:{URL}}" />
         </rule>
+        
       </rules>
     </rewrite>
   
