Tweaks and adjustments

--- a/Web.config
+++ b/Web.config
@@ -10,12 +10,7 @@
     
     <compilation debug="false" targetFramework="4.0" strict="true" explicit="true" />
  
-    <customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/Error.aspx">
-      <error statusCode="401" redirect="~/Error.aspx?code=401" />
-      <error statusCode="403" redirect="~/Error.aspx?code=403" />
-      <error statusCode="404" redirect="~/Error.aspx?code=404" />
-      <error statusCode="408" redirect="~/Error.aspx?code=408" />
-      <error statusCode="500" redirect="~/Error.aspx?code=500" />
+    <customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/error.aspx">
     </customErrors>
     
     <trace enabled="false" pageOutput="false" />
@@ -122,16 +117,16 @@
         </rule>
         
         <rule name="Default Document" stopProcessing="true">
-          <match url="(.*?)/?Default\.aspx$" />
-          <action type="Redirect" url="{R:1}/" />
+          <match url="(.*?)/?default\.aspx$" ignoreCase="true" />
+          <action type="Redirect" url="{R:1}/" redirectType="Permanent" />
         </rule>
 
-        <rule name="Lower Case URLs" stopProcessing="true">
-          <match url="[A-Z]" ignoreCase="false" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-            <add input="{URL}" pattern="WebResource.axd" negate="true" />
+        <rule name="Convert aspx to lower case" stopProcessing="true">
+          <match url=".*[A-Z].*" ignoreCase="false" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" pattern="^.*\.(aspx)$" negate="false" ignoreCase="true" />
           </conditions>
-          <action type="Redirect" url="{ToLower:{URL}}" />
+          <action type="Redirect" url="{ToLower:{R:0}}" redirectType="Permanent" />
         </rule>
         
       </rules>
